--- a/css/estilos.css
+++ b/css/estilos.css
@@ -17,6 +17,7 @@ header>.navbar{
     align-items: center;
     background-color: #5b7989;
     border-radius: 10px 10px 0 0; 
+    padding: 10px; 
 }
 /*Estlio para links contenidos en el barra de navegacion*/
 header  .navbar a{
@@ -40,20 +41,27 @@ header  .navbar a{
 .navbar a:hover{
     background-color: #ddd;
     color: blacK;
-    border-radius: 10px 10px 0 0;
+    border-radius: 10px 10px;
+    margin-left: 10px;
 }
 .contenedor{
     width: 900px;
+    margin: 0 auto;
+    -moz-animation: slideIn 1s;
+    -webkit-animation: slideIn 1s;
+    animation: slideIn 1s;
 }
 .contenido{
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
 }
-
-.contenido>section>article>picture>img[class="banner"]{
+article:first-child{
+    background-color: #82c3a6
+}
+.contenedor>section>article>picture>img[class="banner"]{
     width: 100%;
-    padding: 2em 2em 2em 2em;
+    padding:  2em 2em;
     background-color: #82c3a6;
 }
 /*segundo nivel de contenido*/
@@ -82,11 +90,11 @@ img[class^="img-"]{
 
 /*segunda imagen*/
 .img-retratos{
-    transform: translate(20px,-5px);
+    transform: translate();
     filter: drop-shadow();
     border: 0;
-    transition-property: filter, boder;
-    transition-duration: 1s, 1s;
+    transition-property: transform,filter, boder;
+    transition-duration: 1s, 1s, 1s;
 
 }
 .galeria{
@@ -118,34 +126,34 @@ img[class^="img-"]{
     vertical-align: middle;
     width: 100%;
 }
-img[class^="img-"]
+
 /*animaciones de imagenes*/
 .img-paisajes:hover{
     transform: rotate(20deg);
 }
 
 .img-retratos:hover{
+    transform: translate(20px,-5px);
     filter: drop-shadow(2px 2px 8px #82c3a6);
     border: 2px solid black;
 }
 
 /*pie de pagina*/
-footer>div[class="footer"]{
+.footer{
     display: flex;
     flex-flow: row wrap;
     background-color: #C6d5c5;
     border-radius: 0 0 10px 10px;
     font-size: 0.75em;
+    width: 100%;
 }
 .footer>div[class^="foot"]{
     flex-grow: 0.5;
     text-align: left;
     padding: 1em 1em;
+    width: 25%;
+}
 
-}
-.footer>div[class^="foot"]>ul{
-    list-style: none;
-}
 .social-network{
     display: flex;
     flex-flow: column wrap;
@@ -187,13 +195,28 @@ footer>div[class="footer"]{
  *}
  *
 }*/
+@-webkit-keyframes slideIn{
+    0%{
+        margin-top:150%;
+    }
+    60%{
+        margin-top:-5%;
+    }
+    100%{
+        margin-top: 0;
+    }
+}
 @media screen and (max-width: 900px){
-    .navbar,.cont-img, footer>div[class="footer"], .galeria{
+    .navbar,.cont-img, .footer, .galeria{
         flex-direction: column;
 
     }
+    .navbar>h1{
+        text-align: left;
+    } 
     .contenedor{
         width: 100%;
+        text-align: center;
     }
     .cont-img picture{
         width: 100%;
@@ -209,6 +232,18 @@ footer>div[class="footer"]{
         width: 100%;
         text-decoration: underline;   
     }
-    
+    footer>div[class="footer"]{
+        display: flex;
+        flex-flow: row wrap;
+        background-color: #C6d5c5;
+        border-radius: 0 0 10px 10px;
+        font-size: 2em;
+    }
+    .footer>div[class^="foot"]{
+        flex-grow: 0.5;
+        text-align: left;
+        padding: 1em 1em;
+        width: 100%;
+    }
    
 }
